<?xml version="1.0"?>
<!--Author: Gabriele Buondonno-->
<package>
  <name>sot_talos_balance</name>
  <version>1.0.0</version>
  <description>The sot_talos_balance package</description>

  <maintainer email="gbuondon@laas.fr">Gabriele Buondonno</maintainer>

  <license>BSD</license>

  <run_depend>image_proc</run_depend>
  <run_depend>talos_controller_configuration</run_depend>
  <run_depend>talos_description</run_depend>
  <run_depend>talos_hardware_gazebo</run_depend>
  <run_depend>talos_bringup</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_worlds</run_depend>
  <run_depend>roboticsgroup_gazebo_plugins</run_depend>
  <run_depend>talos_controller_configuration_gazebo</run_depend>
  <run_depend>talos_gazebo</run_depend>

  <export>
  </export>
</package>
